# slp

./: .gitignore  Cargo.toml  LICENSE  README.md  test.sh
capi/: Cargo.toml
capi/include/: slp.h
capi/src/: lib.rs
slipstream/: Cargo.toml
slipstream/src/: main.rs
src/: hlsl.rs  hlslp.rs  lib.rs
src/clc/: binary.rs  cil.rs  cir.rs  cst.rs  fragments.rs  mod.rs  transpiler.rs  untyper.rs
src/hlsl/: ast.rs  ast_to_ir.rs  casting.rs  globals_analysis.rs  intrinsics.rs  ir.rs  lexer.rs  mod.rs  parser.rs  preprocess.rs  tokens.rs  typer.rs
src/hlsl/tests/: cs1.hlsl  cs1.rs  mod.rs
src/lang/cil/: Cargo.toml
src/lang/cil/src/: cil.rs  lib.rs
src/lang/cst/: Cargo.toml
src/lang/cst/src/: cst.rs  fragments.rs  lib.rs
src/lang/hir/: Cargo.toml
src/lang/hir/src/: globals_analysis.rs  hir_intrinsics.rs  ir.rs  lib.rs
src/lang/hst/: Cargo.toml
src/lang/hst/src/: ast.rs  lib.rs
src/lang/htk/: Cargo.toml
src/lang/htk/src/: lib.rs  tokens.rs
src/sequence/hlsl_to_cl/: Cargo.toml
src/sequence/hlsl_to_cl/src/: lib.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs  opencl.rs
src/tests/: cons.cl  cons.hlsl  cs1.rs  cs2.cl  cs2.hlsl  cs2.rs  cs2_expected.cl  include.cl  include_aux.hlsl  include_main.hlsl  intrinsic.cl  intrinsic.hlsl  intrinsic.rs  mod.rs  overload.cl  overload.hlsl  overload.rs  swizzle.cl  swizzle.hlsl  ternary.cl  ternary.hlsl
src/transform/cil_to_cst/: Cargo.toml
src/transform/cil_to_cst/src/: lib.rs  untyper.rs
src/transform/cst_printer/: Cargo.toml
src/transform/cst_printer/src/: binary.rs  lib.rs
src/transform/hir_to_cil/: Cargo.toml
src/transform/hir_to_cil/src/: lib.rs  transpiler.rs
src/transform/hst_to_hir/: Cargo.toml
src/transform/hst_to_hir/src/: casting.rs  intrinsics.rs  lib.rs  typer.rs
src/transform/htk_to_hst/: Cargo.toml
src/transform/htk_to_hst/src/: lib.rs  parser.rs
src/transform/lexer/: Cargo.toml
src/transform/preprocess/: Cargo.toml
(+12 files in other folders)
