[package]
name = "slp_sequence_hlsl_to_cl"
version = "0.1.0"
authors = ["Trark"]

[dependencies.slp_shared]
path = "../../shared"

[dependencies.slp_lang_htk]
path = "../../lang/htk"

[dependencies.slp_lang_hst]
path = "../../lang/hst"

[dependencies.slp_lang_hir]
path = "../../lang/hir"

[dependencies.slp_lang_cil]
path = "../../lang/cil"

[dependencies.slp_lang_cst]
path = "../../lang/cst"

[dependencies.slp_transform_preprocess]
path = "../../transform/preprocess"

[dependencies.slp_transform_lexer]
path = "../../transform/lexer"

[dependencies.slp_transform_htk_to_hst]
path = "../../transform/htk_to_hst"

[dependencies.slp_transform_hst_to_hir]
path = "../../transform/hst_to_hir"

[dependencies.slp_transform_hir_to_cil]
path = "../../transform/hir_to_cil"

[dependencies.slp_transform_cil_to_cst]
path = "../../transform/cil_to_cst"

[dependencies.slp_transform_cst_printer]
path = "../../transform/cst_printer"
