[package]
name = "slp_transform_hir_to_cil"
version = "0.1.0"
authors = ["Trark"]

[dependencies.slp_shared]
path = "../../shared"

[dependencies.slp_lang_hst]
path = "../../lang/hst"

[dependencies.slp_lang_hir]
path = "../../lang/hir"

[dependencies.slp_lang_cil]
path = "../../lang/cil"

[dependencies.slp_lang_cst]
path = "../../lang/cst"

[dependencies.slp_transform_hst_to_hir]
path = "../hst_to_hir"